--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,13 +1,207 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Frontend</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
+
+  <!DOCTYPE html>
+  <html lang="es">
+      <head>
+          <!--Inserto titulo de página para mostrar en la barra del navegador-->
+          <title>My Properties by jrodg85</title>
+          <!--Inserto etiqueta meta para autor-->
+          <meta name="author" content="José Enrique Rodríguez González"/>
+          <!--Inserto etiqueta meta para codificación-->
+          <meta charset="UTF-8" />
+          <!--Inserto etiqueta meta para descripción-->
+          <meta name="description" content="Con esta aplicación se podrá gestionar distintas propiedades inmobiliarias, publicando inmuebles con sus distintas ofertas de compra o alquiler, posteriormente se podrá gestionar auto-contratos."/>
+          <!--Inserto etiqueta meta para adaptación a cualquier dispositivo-->
+          <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+          <!--Inserto etiqueta meta para compatibilidad de explorador-->
+          <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+          <!--Inserto favicon, uso favicon generator.-->
+          <link rel="apple-touch-icon" sizes="57x57" href="/Imagenes/favicon/apple-icon-57x57.png">
+          <link rel="apple-touch-icon" sizes="60x60" href="/Imagenes/favicon/apple-icon-60x60.png">
+          <link rel="apple-touch-icon" sizes="72x72" href="/Imagenes/favicon/apple-icon-72x72.png">
+          <link rel="apple-touch-icon" sizes="76x76" href="/Imagenes/favicon/apple-icon-76x76.png">
+          <link rel="apple-touch-icon" sizes="114x114" href="/Imagenes/favicon/apple-icon-114x114.png">
+          <link rel="apple-touch-icon" sizes="120x120" href="/Imagenes/favicon/apple-icon-120x120.png">
+          <link rel="apple-touch-icon" sizes="144x144" href="/Imagenes/favicon/apple-icon-144x144.png">
+          <link rel="apple-touch-icon" sizes="152x152" href="/Imagenes/favicon/apple-icon-152x152.png">
+          <link rel="apple-touch-icon" sizes="180x180" href="/Imagenes/favicon/apple-icon-180x180.png">
+          <link rel="icon" type="image/png" sizes="192x192"  href="/Imagenes/favicon/android-icon-192x192.png">
+          <link rel="icon" type="image/png" sizes="32x32" href="/Imagenes/favicon/favicon-32x32.png">
+          <link rel="icon" type="image/png" sizes="96x96" href="/Imagenes/favicon/favicon-96x96.png">
+          <link rel="icon" type="image/png" sizes="16x16" href="/Imagenes/favicon/favicon-16x16.png">
+          <link rel="manifest" href="/Imagenes/favicon/manifest.json">
+          <meta name="msapplication-TileColor" content="#ffffff">
+          <meta name="msapplication-TileImage" content="./Imagenes/favicon/ms-icon-144x144.png">
+          <meta name="theme-color" content="#ffffff">
+          <!--añado bootstrap, tiene que ser antes del CSS externo-->
+          <link rel="stylesheet" href="/css/style.css" />
+          <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+          <!--añado CSS a externos-->
+          <link rel="stylesheet" href="/css/style.css" />
+          <!--añado FontAwesome-->
+          <script src="https://kit.fontawesome.com/e222ca7366.js" crossorigin="anonymous"></script>
+      </head>
+
+      <body>
+          <!--Uso barra de navegación responsive de bootstrap, ire modificando cosas que ire comentando, la fuente utilizada como origen se puede encontrar en el enlace https://getbootstrap.com/docs/5.1/components/navbar/ he adaptado la siguiente linea para que el fondo sea de otro color, en vez de el blanco, he usado como fuente el siguiente enlace https://bootstrap-cheatsheet.themeselection.com/#navbar-light-->
+          <nav class="navbar navbar-expand-lg navbar-light container-fluid" style="background-color: #55e6d5;">
+              <!--En vez de botón menu tal y como me lo entrega bootstrap, coloco el icono de la aplicación-->
+              <a class="navbar-brand" href="index.html">
+                  <img
+                      src="/Imagenes/favicon/icono_proyecto.jpg"
+                      alt="Inicio"
+                      width="150px"
+                      height="auto"
+                  />
+              </a>
+              <!--En vez de boton menu, coloco el icono de la aplicación-->
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                              <a class="nav-link active" aria-current="page" href="/Presentacion.html">Presentación</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Aplicación
+                      </a>
+                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <li><a class="dropdown-item " href="/publicar-casa.html">Publicar vivienda</a></li>
+                          <li><a class="dropdown-item " href="#">Venta</a></li>
+                          <li><a class="dropdown-item disabled" href="#">Alquiler</a></li>
+                          <li><hr class="dropdown-divider"></li>
+                          <li><a class="dropdown-item disabled" href="#">Alquiler Vacacional</a></li>
+                      </ul>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link active" href="error404.html">Ejemplo de Error 404</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link disabled">Elemento desactivado</a>
+                  </li>
+              </ul>
+              <form class="d-flex">
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Search</button>
+              </form>
+              </div>
+      </nav>
+
+          <!--Hasta aqui es común en todas las páginas solo poner inactivo lo que no sea necesario-->
+          <!--Creo un header para esta pagina, he usado un tipo de fuente distinta a la normal, descargandola en local y usando css-->
+          <header class="header-index container-fluid">
+                      <h1>My Properties</h1>
+              <p>Bienvenidos a mi web, en ella podrás buscar viviendas para alquilar, vender o irte de vacaciones con tu familiares o amigos.</p>
+              <p>En esta web podrás cambiar el vivir en una gran ciudad y pasarte al vivir en contacto con la naturaleza teniendo acceso a la ciudad siempre que quieras. Desconecta del mundo y disfruta de la naturaleza.</p>
+              <p>También podrás publicar tu casa en caso de que la quieras vender alquilar o alquilar para vacaciones.</p>
+              <div class="boton-publicar-casa">
+                  <a href="/publicar-casa.html">
+                  <button type="button" class="boton-publicar-casa-texto btn btn-secondary btn-md">
+                  Publica tu casa
+                  </button>
+                  </a>
+              </div>
+          </header>
+          <main class="main-index">
+              <section class="section-index container fluid">
+                  <h1>Video de vivienda tipo</h1>
+                  <div class="video-1">
+                      <iframe src="https://www.youtube.com/embed/mtpjkCjAu0I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  </div>
+              </section>
+          </main>
+
+
+          <!--A partir de aquí todo es igual, copiar para las otras páginas-->
+          <!--Uso footer de bootstrap copiado del siguiente enlace https://mdbootstrap.com/snippets/standard/mdbootstrap/2885103#css-tab-view-->
+          <div class="footer">
+              <footer class="text-center text-lg-start border border-white mt-xl-5 pt-4">
+              <!-- Grid container -->
+              <div class="container p-4">
+                  <!--Grid row-->
+                  <div class="row">
+                      <!--Grid column-->
+                      <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                          <h5 class="text-uppercase mb-4">Nuestras ideas</h5>
+                          <ul class="list-unstyled mb-4">
+                              <li>
+                                  <a href="#!" class="text-white">Sobre nosotros</a>
+                              </li>
+                              <li>
+                                  <a href="#!" class="text-white">Webs amigas</a>
+                              </li>
+                              <li>
+                                  <a href="#!" class="text-white">Medio Ambiente</a>
+                              </li>
+                              <li>
+                                  <a href="#!" class="text-white">Colaboraciones</a>
+                              </li>
+                          </ul>
+                      </div>
+                  <!--Grid column-->
+                  <!--Grid column-->
+                  <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                      <h5 class="text-uppercase mb-4">Asistencia</h5>
+                      <ul class="list-unstyled">
+                          <li>
+                              <a href="#!" class="text-white">Contacta con nosotros</a>
+                          </li>
+                          <li>
+                              <a href="#!" class="text-white">Size Guide</a>
+                          </li>
+                          <li>
+                              <a href="#!" class="text-white">Envios</a>
+                          </li>
+                          <li>
+                              <a href="#!" class="text-white">Politica de devoluciones</a>
+                          </li>
+                          <li>
+                              <a href="#!" class="text-white">Forma de pago</a>
+                          </li>
+                      </ul>
+                  </div>
+                  <!--Grid column-->
+                  <!--Grid column-->
+                  <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                      <h5 class="text-uppercase mb-4">Únete a nosotros</h5>
+                      <ul class="list-unstyled">
+                          <li>
+                              <a href="#!" class="text-white">Ofertas de empleo</a>
+                          </li>
+                      </ul>
+                  </div>
+                  <!--Grid column-->
+                  <!--Grid column-->
+                  <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                      <h5 class="text-uppercase mb-4">Mantente actualizado</h5>
+                      <div class="form-outline form-white mb-4">
+                          <input type="email" id="form5Example2" class="form-control" />
+                          <label class="form-label" for="form5Example2">Correo electrónico</label>
+                      </div>
+                      <button type="submit" class="btn btn-outline-white btn-block">Subscribete</button>
+                  </div>
+                  <!--Grid column-->
+              </div>
+              <!--Grid row-->
+              </div>
+              <!-- Grid container -->
+              <!-- Modifico el footer en este punto para añadir los iconos de youtube y github de FontAwesome -->
+              <div class="Iconos-FontAwesome text-center p-3 border-top border-white">
+                      <a href="https://www.youtube.com/channel/UCQeeCZK7hxRgtc1w-oXnEbQ" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-youtube"></i></a>
+                      <a href="https://github.com/jrodg85" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
+              </div>
+              <!-- Copyright -->
+              <div class="text-center p-3 border-top border-white">
+                  © 2022 Copyright:
+                      <a class="text-white" href="https://mdbootstrap.com/">by jrodg85</a>
+              </div>
+              <!-- Copyright -->
+              </footer>
+          </div>
+          <!-- End of .container -->
+          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+      </body>
+  </html>
 </body>
 </html>
